[package]
name = "jetsocat"
version = "0.1.0"
authors = ["Benoît CORTIER <benoit.cortier@fried-world.eu>"]
edition = "2018"

[dependencies]
seahorse = "1.1"
tokio-tungstenite = { version = "0.11", git = "https://github.com/snapview/tokio-tungstenite", features = ["tls"] }
tokio = { version = "0.3", features = ["full"] } #"io-std", "net", "rt", "time"] }
slog = "2.5"
slog-async = "2.5"
slog-term = "2.6"
futures-util = "0.3"
futures-channel = "0.3"
anyhow = "1"
